--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
     <!-- SLIDER -->
     <section id="slider">
-        <div id="carouselExampleCaptions" class="carousel slide">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -61,30 +61,32 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="./img/b1.jpg" class="d-block w-100" alt="banner1">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Lorem Ip Sum Amet</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                    <div class="carousel-caption d-none d-md-block car-title">
+                        <h3>LOREM IPSUM AMET</h3>
+                        <h4>Lorem ipsum dolor sit amet consectetur.</h4>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/b2.jpg" class="d-block w-100" alt="banner2">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                    <div class="carousel-caption d-none d-md-block car-title">
+                        <h3>DOLOR SIT HATANT MORBI</h3>
+                        <h4>Quis autem vel eum iure reprehenderit quivol.</h4>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/b3.jpg" class="d-block w-100" alt="banner3">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                    <div class="carousel-caption d-none d-md-block car-title">
+                        <h3>QUIS AUTEM VE EUM IURE</h3>
+                        <h4>
+                            Excepteur sint ocecat cupid proident, deserunt.</h4>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./img/b4.jpg" class="d-block w-100" alt="banner4">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                    <div class="carousel-caption d-none d-md-block car-title">
+                        <h3>VOLUPTATE VELIT ESSE</h3>
+                        <h4>
+                            Quis autem velreprehenderit qui ea.eum iure.</h4>
                     </div>
                 </div>
             </div>
@@ -417,7 +419,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"
         integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    
+
 </body>
 
 </html>
